<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
    android:id="@+id/cv_upperInfoBar"
    style="@style/Widget.Material3.CardView.Filled"
    android:layout_width="0dp"
    android:layout_height="30dp"
    app:cardCornerRadius="20dp"
    android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
    app:layout_constraintStart_toEndOf="@id/cvUndoRedoPeep"
    app:layout_constraintEnd_toStartOf="@id/right_side_bar"
    app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/btn_d_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="log"
            android:textSize="13sp"
            android:padding="0dp"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/btn_d_test"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="test"
            android:textSize="13sp"
            android:padding="0dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:text="Status will be here"
            android:layout_marginLeft="10dp"/>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_tableContainer"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/cv_upperInfoBar"
        app:layout_constraintEnd_toEndOf="@id/cv_upperInfoBar"
        app:layout_constraintTop_toBottomOf="@id/cv_upperInfoBar">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_table"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="70dp"
            app:layout_constraintDimensionRatio="1:1"
            app:cardBackgroundColor="@color/design_default_color_surface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="2005dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_upper"
                    android:layout_width="100dp"
                    android:layout_height="24dp"
                    android:alpha="0"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@id/tv_big"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.82"
                    tools:text="Smaller text" />

                <TextView
                    android:id="@+id/tv_big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:textAlignment="center"
                    android:textSize="100sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="34" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <include
        android:id="@+id/right_side_bar"
        layout="@layout/right_side_bar"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvUndoRedoPeep"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                style="@style/ThemeOverlay.Material3.FloatingActionButton.Surface"
                android:id="@+id/btnUndo"
                android:contentDescription="@string/undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:enabled="false"
                android:src="@drawable/baseline_undo_24" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRedo"
                android:contentDescription="@string/redo"
                style="@style/ThemeOverlay.Material3.FloatingActionButton.Surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:enabled="false"
                android:src="@drawable/baseline_redo_24" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnPeep"
                style="@style/ThemeOverlay.Material3.FloatingActionButton.Surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:src="@drawable/baseline_remove_red_eye_24"
                android:contentDescription="@string/peep" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_log_container"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="5dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/cvUndoRedoPeep"
        app:layout_constraintEnd_toEndOf="@id/cvUndoRedoPeep"
        app:layout_constraintStart_toStartOf="@id/cvUndoRedoPeep"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/game_action_message"/>

    </com.google.android.material.card.MaterialCardView>
    <!-- debug -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:padding="3dp"

        android:text="@string/number1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateClickableBoundsCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number2"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number3"
            android:textSize="30sp"
            tools:ignore="VisualLintOverlap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number4"
            android:textSize="30sp"
            tools:ignore="VisualLintOverlap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number5"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number6"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number7"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number8"
            android:textSize="30sp"
            tools:ignore="VisualLintOverlap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number9"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn10"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number10"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn11"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number11"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn12"
            style="@style/Widget.Material3.Button.IconButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/number12"
            android:textSize="30sp" />
</androidx.constraintlayout.widget.ConstraintLayout>
